chore: made following updates * added a new alarm handler function * handled changes in config * cancel alarm if do not disturb is checked * made notification title optional * removed unused persmission from manifest * quiet hour dropdowns will have numeric value property * added a new future item in readme

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Aqua Buddy",
   "version": "1.0",
   "description": "I'm your friend 💙 and I'm here to help you stay hydrated!",
-  "permissions": ["alarms", "declarativeContent", "notifications", "storage"],
+  "permissions": ["alarms", "notifications", "storage"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
